[package]
name = "random-unicode-emoji"
version = "1.0.0"
edition = "2021"
authors = ["Nic Jones <nic@nicpwns.com>"]
description = "A simple Rust crate that returns random Unicode emojis. ❤️"
homepage = "https://github.com/NicPWNs/random-unicode-emoji-rs"
documentation = "https://github.com/NicPWNs/random-unicode-emoji-rs"
repository = "https://github.com/NicPWNs/random-unicode-emoji-rs"
readme = "README.md"
license = "MIT"
keywords = ["emoji", "random", "unicode"]
categories = ["gui", "encoding", "web-programming", "text-processing", "games"]

[lib]
crate-type = ["dylib"]
bench = false

[dependencies]
include_dir = "0.7.3"
rand = "0.8.5"
